--- a/src/components/ExploreContainer.css
+++ b/src/components/ExploreContainer.css
@@ -1,9 +1,8 @@
 .container {
   text-align: center;
   position: absolute;
-  left: 0;
-  right: 0;
   top: 50%;
+  max-width: 440px;
   transform: translateY(-50%);
 }
 
